       EPSON WorkForce WF-7511 (EXPERIMENTAL)
       EPSON WorkForce WF-7515 (EXPERIMENTAL)
       EPSON WorkForce WF-7520 (EXPERIMENTAL)
       EPSON WorkForce WF-7521 (EXPERIMENTAL)
       EPSON WorkForce WF-7525 (EXPERIMENTAL)
       EPSON PX-1200 (EXPERIMENTAL)
       EPSON PX-1600F (EXPERIMENTAL)
       EPSON PX-1700F (EXPERIMENTAL)

     - Canon inkjets:

       Canon MP220 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP220   (EXPERIMENTAL)(*2)
       Canon PIXMA MP228   (EXPERIMENTAL)(*2)

       Canon MP230 series  (EXPERIMENTAL)
       Canon PIXMA MP230   (EXPERIMENTAL)(*2)
       Canon PIXMA MP236   (EXPERIMENTAL)(*2)
       Canon PIXMA MP237   (EXPERIMENTAL)(*2)

       Canon MP240 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP240   (EXPERIMENTAL)(*2)
       Canon PIXMA MP245   (EXPERIMENTAL)(*2)

       Canon MP250 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP250   (EXPERIMENTAL)(*2)
       Canon PIXMA MP252   (EXPERIMENTAL)(*2)
       Canon PIXMA MP258   (EXPERIMENTAL)(*2)
       Canon PIXMA MP259   (EXPERIMENTAL)(*2)

       Canon MP260 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP260   (EXPERIMENTAL)(*2)
       Canon PIXMA MP268   (EXPERIMENTAL)(*2)

       Canon MP270 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP270   (EXPERIMENTAL)(*2)
       Canon PIXUS MP270   (EXPERIMENTAL)(*2)
       Canon PIXMA MP272   (EXPERIMENTAL)(*2)
       Canon PIXMA MP276   (EXPERIMENTAL)(*2)

       Canon MP280 series  (EXPERIMENTAL)(*1)
       Canon PIXMA MP280   (EXPERIMENTAL)(*2)
       Canon PIXUS MP280   (EXPERIMENTAL)(*2)
       Canon PIXMA MP282   (EXPERIMENTAL)(*2)
       Canon PIXMA MP287   (EXPERIMENTAL)(*2)
       Canon PIXMA MP288   (EXPERIMENTAL)(*2)

       Canon MG2100 series (EXPERIMENTAL)(*1)
       Canon PIXMA MG2110  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2120  (EXPERIMENTAL)(*2)
       Canon PIXUS MG2130  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2140  (EXPERIMENTAL)(*2)
       Canon PIXMA MG2150  (EXPERIMENTAL)(*2)